Fix: Project active status contrast was bad in light mode. Feat: Added new tech to project "Drachma".

--- a/src/stylesheets/Projects.css
+++ b/src/stylesheets/Projects.css
@@ -51,8 +51,15 @@ section#projects .project-grid .grid-item .content .status {
 }
 
 section#projects .project-grid .grid-item .content .status.active {
-
+    
     color: var(--accent);
+    font-weight: bold;
+    
+}
+[data-theme="light"] section#projects .project-grid .grid-item .content .status.active {
+
+    color: var(--font-default);
+    font-weight: bold;
 
 }
 
